frame/support/test/tests/pallet_ui/step_017.stderr
error: Invalid pallet::call, expect item impl
  --> $DIR/step_017.rs:15:2
   |
15 |     pub enum Call {}
   |     ^^^
